fix: avoid horizontal scrollbar for tables with fixed headers (#378)

--- a/packages/components/src/List/ItemTitle/ItemTitle.scss
+++ b/packages/components/src/List/ItemTitle/ItemTitle.scss
@@ -3,6 +3,7 @@ $tc-list-item-title-icon-size: $svg-lg-size !default;
 
 .item-title {
 	display: flex;
+	min-width: 0;
 
 	.icon {
 		flex-shrink: 0;
